# build-your-own-lisp

./: .gitignore  CMakeLists.txt  Makefile  README.md
resources/: prelude.lspy  test.lspy
src/: CMakeLists.txt  builtin.c  builtin.h  doge.c  lenv.c  lenv.h  lib.c  lib.h  lispy.c  lispy.h  lval.c  lval.h  main.c  prompt.c
test/: CMakeLists.txt  builtin_test.c  lib_test.c  lispy_test.c  lval_test.c
